<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="UselessParent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/padding">

        <TextView
            style="@style/Text.Title"
            android:layout_width="@dimen/content_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:text="@string/title_text_round_corner_progress_bar" />

        <LinearLayout
            style="@style/SampleCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.akexorcist.roundcornerprogressbar.TextRoundCornerProgressBar
                android:id="@+id/progressBarTextCustom"
                style="@style/SampleProgress"
                app:rcAnimationEnable="false"
                app:rcBackgroundColor="@color/sample_progress_background"
                app:rcBackgroundPadding="4dp"
                app:rcMax="255"
                app:rcProgress="80"
                app:rcProgressColor="@color/sample_progress_primary"
                app:rcRadius="10dp"
                app:rcTextInsideGravity="start"
                app:rcTextOutsideGravity="start"
                app:rcTextPositionPriority="inside"
                app:rcTextProgress="50"
                app:rcTextProgressColor="@color/sample_progress_text_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonTextCustomExtraDecrease"
                    style="@style/SampleButton"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:text="@string/decrease_20" />

                <Button
                    android:id="@+id/buttonTextCustomDecrease"
                    style="@style/SampleButton"
                    android:text="@string/decrease_2" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/buttonTextCustomIncrease"
                    style="@style/SampleButton"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:text="@string/increase_2" />

                <Button
                    android:id="@+id/buttonTextCustomExtraIncrease"
                    style="@style/SampleButton"
                    android:text="@string/increase_20" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/checkBoxAnimationEnable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_animation" />

            <TextView
                style="@style/Text.Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/inside_gravity" />

            <RadioGroup
                android:id="@+id/radioGroupInsideGravity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonInsideGravityStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/gravity_start" />

                <RadioButton
                    android:id="@+id/radioButtonInsideGravityEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gravity_end" />
            </RadioGroup>

            <TextView
                style="@style/Text.Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/outside_gravity" />

            <RadioGroup
                android:id="@+id/radioGroupOutsideGravity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonOutsideGravityStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/gravity_start" />

                <RadioButton
                    android:id="@+id/radioButtonOutsideGravityEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gravity_end" />
            </RadioGroup>

            <TextView
                style="@style/Text.Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/text_position_priority" />

            <RadioGroup
                android:id="@+id/radioGroupTextPositionPriority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonTextPositionPriorityInside"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/priority_inside" />

                <RadioButton
                    android:id="@+id/radioButtonTextPositionPriorityOutside"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_outside" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            style="@style/SampleCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.akexorcist.roundcornerprogressbar.TextRoundCornerProgressBar
                android:id="@+id/progressBarText1"
                style="@style/SampleProgress"
                app:rcBackgroundColor="@color/sample_progress_background"
                app:rcBackgroundPadding="4dp"
                app:rcMax="100"
                app:rcProgress="50"
                app:rcProgressColor="@color/sample_progress_primary"
                app:rcRadius="0dp"
                app:rcTextProgress="50"
                app:rcTextProgressColor="@color/sample_progress_text_color" />

            <TextView
                android:id="@+id/textViewText1"
                style="@style/Text.Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                tools:text="@tools:sample/lorem" />

        </LinearLayout>

        <LinearLayout
            style="@style/SampleCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.akexorcist.roundcornerprogressbar.TextRoundCornerProgressBar
                android:id="@+id/progressBarText2"
                style="@style/SampleProgress"
                app:rcBackgroundColor="@color/sample_progress_background"
                app:rcBackgroundPadding="2dp"
                app:rcMax="100"
                app:rcProgress="40"
                app:rcProgressColor="@color/sample_progress_primary"
                app:rcRadius="10dp"
                app:rcSecondaryProgress="60"
                app:rcSecondaryProgressColor="@color/sample_progress_secondary"
                app:rcTextInsideGravity="end"
                app:rcTextProgress="@string/loading"
                app:rcTextProgressColor="@color/sample_progress_text_color" />

            <TextView
                android:id="@+id/textViewText2"
                style="@style/Text.Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                tools:text="@tools:sample/lorem" />

        </LinearLayout>

        <LinearLayout
            style="@style/SampleCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.akexorcist.roundcornerprogressbar.TextRoundCornerProgressBar
                android:id="@+id/progressBarText3"
                style="@style/SampleProgress"
                app:rcBackgroundColor="@color/sample_progress_background"
                app:rcBackgroundPadding="2dp"
                app:rcMax="100"
                app:rcProgress="20"
                app:rcProgressColor="@color/sample_progress_primary"
                app:rcRadius="80dp"
                app:rcReverse="true"
                app:rcSecondaryProgress="75"
                app:rcSecondaryProgressColor="@color/sample_progress_secondary"
                app:rcTextPositionPriority="outside"
                app:rcTextProgress="20"
                app:rcTextProgressColor="@color/sample_progress_text_color" />

            <TextView
                android:id="@+id/textViewText3"
                style="@style/Text.Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                tools:text="@tools:sample/lorem" />

        </LinearLayout>

        <LinearLayout
            style="@style/SampleCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.akexorcist.roundcornerprogressbar.TextRoundCornerProgressBar
                android:id="@+id/progressBarText4"
                style="@style/SampleProgress.Thin"
                app:rcBackgroundColor="@color/sample_progress_background"
                app:rcBackgroundPadding="2dp"
                app:rcMax="100"
                app:rcProgress="80"
                app:rcProgressColors="@array/sample_progress_gradient"
                app:rcRadius="20dp"
                app:rcTextProgress="80"
                app:rcTextProgressColor="@color/sample_progress_text_color"
                app:rcTextProgressSize="@dimen/progress_text_size_small" />

            <TextView
                android:id="@+id/textViewText4"
                style="@style/Text.Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                tools:text="@tools:sample/lorem" />

        </LinearLayout>

        <LinearLayout
            style="@style/SampleCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.akexorcist.roundcornerprogressbar.TextRoundCornerProgressBar
                android:id="@+id/progressBarText5"
                style="@style/SampleProgress.Fat"
                app:rcBackgroundColor="@color/sample_progress_background"
                app:rcBackgroundPadding="10dp"
                app:rcMax="200"
                app:rcProgress="20"
                app:rcProgressColor="@color/sample_progress_primary"
                app:rcRadius="20dp"
                app:rcTextProgress="20"
                app:rcTextProgressColor="@color/sample_progress_text_color" />

            <TextView
                android:id="@+id/textViewText5"
                style="@style/Text.Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                tools:text="@tools:sample/lorem" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>